syntax = "proto3";
package models;

import "models/Address.proto";

option java_package = "io.simplecoder.grpc.unary.generated.protobufs.models";
option java_multiple_files = true;


message UserRegistrationRequest {
    string user_name = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    repeated fixed32 phone_numbers = 5;
    models.Address address = 6;
}

message UserQueryByIdRequest {
    int64 user_id = 1;
}

message UserResponse {
    int64 user_id = 1;
    string user_name = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    repeated fixed32 phone_numbers = 6;
    Address address = 7;
}